--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -86,11 +86,10 @@
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/guard_recycler"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="5dp"
-                    android:layout_toLeftOf="@id/tv_popularity"
-                    android:layout_toRightOf="@id/rl_anchor_info">
+                    android:layout_marginRight="10dp"
+                    android:layout_toLeftOf="@id/tv_popularity">
 
                 </android.support.v7.widget.RecyclerView>
 
@@ -143,7 +142,7 @@
                         android:layout_height="wrap_content"
                         android:singleLine="true"
                         android:textSize="12sp"
-                        android:visibility="gone"/>
+                        android:visibility="gone" />
                 </android.support.design.widget.CoordinatorLayout>
 
                 <Button
