--- a/app/src/main/res/layout/fragment_private_chat.xml
+++ b/app/src/main/res/layout/fragment_private_chat.xml
@@ -38,7 +38,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:background="#292929" />
+        android:background="#292929"
+        android:layout_marginBottom="10dp"
+        android:paddingBottom="5dp"/>
 
     <LinearLayout
         android:id="@+id/ll_bottom_container"
