--- a/app/src/main/res/layout/dialog_audience_info.xml
+++ b/app/src/main/res/layout/dialog_audience_info.xml
@@ -182,7 +182,8 @@
             android:layout_centerHorizontal="true"
             android:elevation="2dp"
             app:civ_border_color="#b9b9b9"
-            app:civ_border_width="1dp" />
+            app:civ_border_width="1dp"
+            android:src="@drawable/empty_avatar"/>
 
     </RelativeLayout>
 
