--- a/app/src/main/res/layout/dialog_modify_avatar.xml
+++ b/app/src/main/res/layout/dialog_modify_avatar.xml
@@ -1,34 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" 
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <Button
-        android:id="@+id/user_info_photo"
+        android:id="@+id/btn_capture"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="50dp"
         android:text="@string/user_info_photo"
         android:textColor="@color/font_color_1"
         android:background="@color/font_color_white"/>
     <View
         android:layout_width="match_parent"
-        android:layout_height="@dimen/x1"/>
+        android:layout_height="1dp"
+        android:background="#e5e5e5"/>
     <Button
-        android:id="@+id/user_info_album"
+        android:id="@+id/btn_album"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="50dp"
         android:text="@string/user_info_album"
         android:textColor="#323232"
         android:background="@color/font_color_white"/>
     <View
         android:layout_width="match_parent"
-        android:layout_height="@dimen/x2"/>
+        android:layout_height="4dp"
+        android:background="#e5e5e5"/>
     <Button
-        android:id="@+id/user_info_cancel"
+        android:id="@+id/btn_cancel"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="50dp"
         android:text="@string/user_info_cancel"
         android:textColor="#323232"
         android:background="@color/font_color_white"/>
