--- a/app/src/main/res/layout/activity_user_info_sex_layout.xml
+++ b/app/src/main/res/layout/activity_user_info_sex_layout.xml
@@ -1,49 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/font_color_49">
+    android:orientation="vertical">
 
-    <include
-        android:id="@+id/user_info_sex_include"
-        layout="@layout/activity_base_toolbar"/>
+    <include layout="@layout/comm_toolbar" />
 
     <RadioGroup
         android:id="@+id/rg_gender"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/font_color_51"
-        android:layout_below="@id/user_info_sex_include">
+        android:background="@color/font_color_51">
+
         <RadioButton
             android:id="@+id/rb_man"
             android:layout_width="match_parent"
             android:layout_height="45dp"
+            android:button="@null"
+            android:drawableRight="@drawable/selector_pay_way_rb"
             android:paddingLeft="20dp"
             android:paddingRight="15dp"
             android:text="@string/user_info_sex_m"
-            android:textStyle="bold"
-            android:textSize="@dimen/font_size_30px"
             android:textColor="@color/font_color_47"
-            android:drawableRight="@drawable/selector_pay_way_rb"
-            android:button="@null"/>
+            android:textSize="@dimen/font_size_30px"
+            android:textStyle="bold" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/font_color_49"/>
+            android:background="@color/font_color_49" />
 
         <RadioButton
             android:id="@+id/rb_woman"
             android:layout_width="match_parent"
             android:layout_height="45dp"
+            android:button="@null"
+            android:drawableRight="@drawable/selector_pay_way_rb"
             android:paddingLeft="20dp"
             android:paddingRight="15dp"
             android:text="@string/user_info_sex_w"
-            android:textStyle="bold"
-            android:textSize="@dimen/font_size_30px"
             android:textColor="@color/font_color_47"
-            android:drawableRight="@drawable/selector_pay_way_rb"
-            android:button="@null"/>
+            android:textSize="@dimen/font_size_30px"
+            android:textStyle="bold" />
     </RadioGroup>
-</RelativeLayout>
+</LinearLayout>
