--- a/app/src/main/res/layout/dialog_audience_info.xml
+++ b/app/src/main/res/layout/dialog_audience_info.xml
@@ -32,92 +32,97 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="7dp"
                     android:layout_marginTop="41dp"
                     android:textColor="@color/colorblack"
                     android:textSize="17sp"
                     android:textStyle="bold" />
 
-                <ImageView
-                    android:id="@+id/iv_level_icon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/tv_name"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="7dp"
-                    android:minHeight="10dp"
-                    android:orientation="horizontal">
-
-                </ImageView>
-
-                <TextView
-                    android:id="@+id/tv_user_id"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/iv_level_icon"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="5.5dp"
-                    android:textColor="#b9b9b9"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
-
-                <LinearLayout
-                    android:id="@+id/ll_age_container"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/tv_user_id"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="10dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/tv_age"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:drawableLeft="@drawable/user_age_icon"
-                        android:drawablePadding="14dp"
-                        android:textColor="#9c9c9c"
-                        android:textSize="13sp" />
-
-                    <View
-                        android:layout_width="0.5dp"
-                        android:layout_height="16dp"
-                        android:layout_marginLeft="17dp"
-                        android:background="#d2d2d2" />
-
-                    <TextView
-                        android:id="@+id/tv_location"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="17dp"
-                        android:drawableLeft="@drawable/location_icon"
-                        android:drawablePadding="14dp"
-                        android:textColor="#9c9c9c"
-                        android:textSize="13sp" />
-
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/tv_introduce"
+                <RelativeLayout
+                    android:id="@+id/rl_info_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/ll_age_container"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginTop="10dp"
-                    android:gravity="center"
-                    android:hint="@string/no_motto_hint"
-                    android:maxLines="2"
-                    android:singleLine="true"
-                    android:textColor="#9e9e9e" />
+                    android:layout_below="@id/tv_name">
+
+                    <ImageView
+                        android:id="@+id/iv_level_icon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:minHeight="10dp">
+
+                    </ImageView>
+
+                    <TextView
+                        android:id="@+id/tv_user_id"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/iv_level_icon"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="5.5dp"
+                        android:textColor="#b9b9b9"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+
+                    <LinearLayout
+                        android:id="@+id/ll_age_container"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/tv_user_id"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="10dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/tv_age"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:drawableLeft="@drawable/user_age_icon"
+                            android:drawablePadding="14dp"
+                            android:textColor="#9c9c9c"
+                            android:textSize="13sp" />
+
+                        <View
+                            android:layout_width="0.5dp"
+                            android:layout_height="16dp"
+                            android:layout_marginLeft="17dp"
+                            android:background="#d2d2d2" />
+
+                        <TextView
+                            android:id="@+id/tv_location"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="17dp"
+                            android:drawableLeft="@drawable/location_icon"
+                            android:drawablePadding="14dp"
+                            android:textColor="#9c9c9c"
+                            android:textSize="13sp" />
+
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/tv_introduce"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/ll_age_container"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginTop="10dp"
+                        android:gravity="center"
+                        android:hint="@string/no_motto_hint"
+                        android:maxLines="2"
+                        android:singleLine="true"
+                        android:textColor="#9e9e9e" />
+                </RelativeLayout>
 
                 <LinearLayout
                     android:id="@+id/ll_option_container"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:layout_below="@id/tv_introduce"
+                    android:layout_below="@id/rl_info_container"
                     android:orientation="horizontal"
                     android:visibility="visible">
 
@@ -126,7 +131,7 @@
                         style="@style/style_audience_info_option_text"
                         android:text="@string/ban"
                         android:textColor="#f76667"
-                        android:visibility="gone"/>
+                        android:visibility="gone" />
 
                     <View style="@style/audience_info_option_divider" />
 
@@ -135,7 +140,7 @@
                         style="@style/style_audience_info_option_text"
                         android:text="@string/kick_out"
                         android:textColor="#e07434"
-                        android:visibility="gone"/>
+                        android:visibility="gone" />
 
                     <View style="@style/audience_info_option_divider" />
 
@@ -144,7 +149,7 @@
                         style="@style/style_audience_info_option_text"
                         android:text="@string/upgrade_room_manager"
                         android:textColor="#a96aec"
-                        android:visibility="gone"/>
+                        android:visibility="gone" />
 
                     <View style="@style/audience_info_option_divider" />
 
@@ -153,7 +158,7 @@
                         style="@style/style_audience_info_option_text"
                         android:text="私聊"
                         android:textColor="#337ec1"
-                        android:visibility="gone"/>
+                        android:visibility="gone" />
 
                 </LinearLayout>
 
@@ -181,9 +186,9 @@
             android:layout_height="58dp"
             android:layout_centerHorizontal="true"
             android:elevation="2dp"
+            android:src="@drawable/empty_avatar"
             app:civ_border_color="#b9b9b9"
-            app:civ_border_width="1dp"
-            android:src="@drawable/empty_avatar"/>
+            app:civ_border_width="1dp" />
 
     </RelativeLayout>
 
