--- a/app/src/main/res/layout/fragment_home_new.xml
+++ b/app/src/main/res/layout/fragment_home_new.xml
@@ -19,8 +19,8 @@
             android:id="@+id/scroll_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:overScrollMode="never"
-            android:focusableInTouchMode="true">
+            android:focusableInTouchMode="true"
+            android:overScrollMode="never">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -31,6 +31,7 @@
                     android:id="@+id/bannerLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="9dp"
                     android:focusableInTouchMode="true">
 
                     <com.youth.banner.Banner
@@ -46,7 +47,6 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="38dp"
-                    android:layout_marginTop="9dp"
                     android:background="@color/white"
                     android:gravity="center_vertical"
                     android:paddingLeft="18dp"
