--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -146,4 +146,10 @@
     <color name="comm_white">#f9f9f9</color>
     <color name="white">#FFFFFF</color>
     <color name="emoji_bg">#f4f4f4</color>
+    <color name="rank_1_status_text_color">#ffdc3c</color>
+    <color name="rank_2_status_text_color">#099aff</color>
+    <color name="rank_3_status_text_color">#ffa77a</color>
+    <color name="rank_1_nick_name_color">#ffe156</color>
+    <color name="rank_2_nick_name_color">#099aff</color>
+    <color name="rank_3_nick_name_color">#6562a7</color>
 </resources>
