--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -74,7 +74,7 @@
     </style>
 
 
-    <!--送礼弹窗tab-->
+    <!--tab-->
     <style name="LiveHouseDialogTab" parent="Widget.Design.TabLayout">
         <item name="tabIndicatorColor">#20c78a</item>
         <item name="tabIndicatorHeight">2dp</item>
@@ -88,12 +88,54 @@
         <item name="tabGravity">fill</item>
     </style>
 
+    <style name="RankTab" parent="Widget.Design.TabLayout">
+        <item name="tabIndicatorColor">#2cd996</item>
+        <item name="tabIndicatorHeight">2dp</item>
+        <item name="android:textAllCaps">true</item>
+        <!--<selectedItem name="tabIndicatorColor">@android:color/white</selectedItem>-->
+        <!--<item name="tabPaddingStart">15dp</item>-->
+        <!--<item name="tabPaddingEnd">15dp</item>-->
+        <item name="tabBackground">@color/white</item>
+        <item name="tabTextAppearance">@style/RankTabText</item>
+        <item name="tabSelectedTextColor">#2cd996</item>
+        <item name="tabGravity">fill</item>
+    </style>
+
+    <style name="Rank_Period_Tab" parent="Widget.Design.TabLayout">
+        <item name="tabIndicatorColor">#000000</item>
+        <item name="tabIndicatorHeight">0dp</item>
+        <item name="android:textAllCaps">true</item>
+        <!--<selectedItem name="tabIndicatorColor">@android:color/white</selectedItem>-->
+        <!--<item name="tabPaddingStart">15dp</item>-->
+        <!--<item name="tabPaddingEnd">15dp</item>-->
+        <item name="tabBackground">@color/appBg</item>
+        <item name="tabTextAppearance">@style/Rank_Period_TabText</item>
+        <item name="tabSelectedTextColor">#f1275b</item>
+        <item name="tabGravity">fill</item>
+    </style>
+
     <style name="LiveHouseDialogTabText" parent="TextAppearance.Design.Tab">
         <item name="android:textSize">17sp</item>
         <item name="android:textColor">#646464</item>
         <!--<selectedItem name="android:textColor">@android:color/white</selectedItem>-->
         <item name="textAllCaps">true</item>
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="RankTabText" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#646464</item>
+        <!--<selectedItem name="android:textColor">@android:color/white</selectedItem>-->
+        <item name="textAllCaps">true</item>
+        <!--<item name="android:textStyle">bold</item>-->
+    </style>
+
+    <style name="Rank_Period_TabText" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#909090</item>
+        <!--<selectedItem name="android:textColor">@android:color/white</selectedItem>-->
+        <item name="textAllCaps">true</item>
+        <!--<item name="android:textStyle">bold</item>-->
     </style>
 
     <style name="audience_info_option_divider">
