--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -263,4 +263,28 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">15sp</item>
     </style>
+
+    <style name="me_tab">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:clickable">true</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@drawable/selector_me_text_color</item>
+        <item name="android:textSize">13sp</item>
+    </style>
+
+    <style name="shop_tab">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:button">@null</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@drawable/selector_shop_tab_text_color</item>
+        <item name="android:drawablePadding">2dp</item>
+        <item name="android:paddingTop">11dp</item>
+        <item name="android:paddingBottom">7dp</item>
+        <item name="android:background">@drawable/selector_shop_tab_backgroud_color</item>
+    </style>
 </resources>
