--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -287,4 +287,12 @@
         <item name="android:paddingBottom">7dp</item>
         <item name="android:background">@drawable/selector_shop_tab_backgroud_color</item>
     </style>
+
+    <style name="text_note_vip">
+        <item name="android:textSize">13sp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">15dp</item>
+        <item name="android:textColor">#646464</item>
+    </style>
 </resources>
