--- a/app/src/main/res/layout/activity_buy_vip.xml
+++ b/app/src/main/res/layout/activity_buy_vip.xml
@@ -96,6 +96,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_price"
             android:layout_width="wrap_content"
             android:layout_height="45dp"
             android:background="@null"
@@ -105,7 +106,6 @@
             android:maxLength="20"
             android:paddingLeft="14dp"
             android:paddingRight="14dp"
-            android:text="30000"
             android:textColor="@color/orange"
             android:textSize="15sp" />
 
