--- a/app/src/main/res/layout/activity_send_vip.xml
+++ b/app/src/main/res/layout/activity_send_vip.xml
@@ -38,29 +38,38 @@
             android:textSize="15sp" />
 
         <EditText
+            android:id="@+id/et_id_search"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_send_vip"
             android:gravity="center_vertical"
+            android:imeOptions="actionSearch"
+            android:inputType="number"
             android:maxLength="20"
+            android:maxLines="1"
             android:padding="5dp"
+            android:singleLine="true"
             android:text=""
             android:textColor="@color/font_color_52"
             android:textSize="15sp" />
 
         <ImageView
+            android:id="@+id/iv_search_success"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:src="@drawable/ic_id_success" />
+            android:src="@drawable/ic_id_success"
+            android:visibility="gone" />
 
         <TextView
+            android:id="@+id/tv_search_fail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="19dp"
             android:text="该用户不存在"
             android:textColor="@color/orange"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            android:visibility="gone" />
     </LinearLayout>
 
     <include layout="@layout/common_divider_1dp" />
@@ -142,6 +151,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_price"
             android:layout_width="wrap_content"
             android:layout_height="45dp"
             android:background="@null"
@@ -151,7 +161,6 @@
             android:maxLength="20"
             android:paddingLeft="14dp"
             android:paddingRight="14dp"
-            android:text="30000"
             android:textColor="@color/orange"
             android:textSize="15sp" />
 
