--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -295,4 +295,16 @@
         <item name="android:layout_marginLeft">15dp</item>
         <item name="android:textColor">#646464</item>
     </style>
+
+    <style name="tab_level_nobility">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:background">@drawable/selector_guard_tab_bg</item>
+        <item name="android:button">@null</item>
+        <item name="android:drawablePadding">1dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">#404040</item>
+        <item name="android:textSize">13sp</item>
+    </style>
 </resources>
