--- a/app/src/main/res/layout/fragment_goodnum_shop.xml
+++ b/app/src/main/res/layout/fragment_goodnum_shop.xml
@@ -105,7 +105,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="7dp"
-                android:layout_marginRight="7dp" />
+                android:layout_marginRight="7dp"
+                android:focusableInTouchMode="false"
+                android:nestedScrollingEnabled="false" />
 
             <LinearLayout
                 android:id="@+id/ll_6"
@@ -144,7 +146,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="7dp"
-                android:layout_marginRight="7dp" />
+                android:layout_marginRight="7dp"
+                android:focusableInTouchMode="false"
+                android:nestedScrollingEnabled="false" />
 
             <LinearLayout
                 android:id="@+id/ll_7"
@@ -183,7 +187,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="7dp"
-                android:layout_marginRight="7dp" />
+                android:layout_marginRight="7dp"
+                android:focusableInTouchMode="false"
+                android:nestedScrollingEnabled="false" />
         </LinearLayout>
 
         <LinearLayout
