--- a/app/src/main/res/layout/activity_buy_goodnum.xml
+++ b/app/src/main/res/layout/activity_buy_goodnum.xml
@@ -279,7 +279,7 @@
             android:gravity="center_vertical"
             android:paddingLeft="14dp"
             android:paddingRight="14dp"
-            android:textColor="@color/text_hint"
+            android:textColor="@color/font_color_52"
             android:textSize="15sp" />
 
     </LinearLayout>
