--- a/app/src/main/res/layout/activity_jsbridge.xml
+++ b/app/src/main/res/layout/activity_jsbridge.xml
@@ -11,7 +11,8 @@
     <com.github.lzyzsd.jsbridge.BridgeWebView
         android:id="@+id/JsBridgeWebView"
         android:layout_width="match_parent"
-        android:layout_height="400dp" />
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
 
     <Button
         android:id="@+id/button3"
