--- a/app/src/main/res/layout/layout_pk.xml
+++ b/app/src/main/res/layout/layout_pk.xml
@@ -24,6 +24,7 @@
             android:paddingRight="5dp">
 
             <TextView
+                android:id="@+id/tv_left_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -33,6 +34,7 @@
                 android:textSize="10sp" />
 
             <TextView
+                android:id="@+id/tv_right_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -43,10 +45,10 @@
                 android:textSize="10sp" />
 
             <ImageView
+                android:id="@+id/iv_state"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:src="@drawable/ic_ko" />
+                android:layout_centerInParent="true" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -65,32 +67,32 @@
                 android:progress="50" />
 
             <TextView
+                android:id="@+id/tv_time_pk"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:background="@drawable/bg_pk_time"
                 android:paddingLeft="4dp"
                 android:paddingRight="4dp"
-                android:text="惩罚时刻"
                 android:textColor="#fff"
                 android:textSize="7sp" />
 
             <TextView
+                android:id="@+id/tv_left_score"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="9dp"
-                android:text="500票"
                 android:textColor="@color/white"
                 android:textSize="7sp" />
 
             <TextView
+                android:id="@+id/tv_right_score"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="9dp"
-                android:text="500票"
                 android:textColor="@color/white"
                 android:textSize="7sp" />
         </RelativeLayout>
@@ -132,11 +134,13 @@
         </LinearLayout>
 
         <ImageView
+            android:id="@+id/iv_left_crown"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:src="@drawable/ic_crown_left" />
+            android:src="@drawable/ic_crown_left"
+            android:visibility="gone" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -174,26 +178,50 @@
         </LinearLayout>
 
         <ImageView
+            android:id="@+id/iv_right_crown"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:src="@drawable/ic_crown_right" />
+            android:src="@drawable/ic_crown_right"
+            android:visibility="gone" />
     </RelativeLayout>
 
     <ImageView
+        android:id="@+id/iv_left_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="93dp"
-        android:src="@drawable/ic_left_lose" />
+        android:layout_marginLeft="93dp" />
 
     <ImageView
+        android:id="@+id/iv_right_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="93dp"
-        android:src="@drawable/ic_right_win" />
+        android:layout_marginRight="93dp" />
+
+
+    <ImageView
+        android:id="@+id/iv_left_lead"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="12dp"
+        android:layout_marginLeft="90dp"
+        android:src="@drawable/ic_left_lead"
+        android:visibility="gone" />
+
+    <ImageView
+        android:id="@+id/iv_right_lead"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="12dp"
+        android:layout_marginRight="90dp"
+        android:src="@drawable/ic_right_lead"
+        android:visibility="gone" />
 
 </RelativeLayout>
