--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -235,6 +235,16 @@
                     android:textSize="12sp"
                     android:visibility="gone" />
 
+                <TextView
+                    android:id="@+id/tv_count_down"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:textColor="@color/text_pk_count_down"
+                    android:textSize="55sp"
+                    android:textStyle="bold"
+                    android:visibility="gone" />
+
             </com.whzl.mengbi.ui.widget.view.RatioRelativeLayout>
 
 
