--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -157,4 +157,5 @@
     <color name="lever_nobility">#ebeffc</color>
     <color name="lever_nobility_white">#e5e5e5</color>
     <color name="text_hint">#909090</color>
+    <color name="text_pk_count_down">#fbcf03</color>
 </resources>
