--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -158,4 +158,6 @@
     <color name="lever_nobility_white">#e5e5e5</color>
     <color name="text_hint">#909090</color>
     <color name="text_pk_count_down">#fbcf03</color>
+    <color name="bg_broadcast_bottom">#702d2933</color>
+    <color name="toast_shop">#d9d9d9</color>
 </resources>
