--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -227,13 +227,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
-                    android:paddingBottom="8dp"
+                    android:paddingBottom="3dp"
                     android:paddingLeft="7dp"
                     android:paddingRight="7dp"
-                    android:paddingTop="8dp"
+                    android:paddingTop="3dp"
                     android:singleLine="true"
                     android:textSize="12sp"
-                    android:visibility="gone" />
+                    android:visibility="visible" />
 
                 <TextView
                     android:id="@+id/tv_count_down"
